--- a/styles/pages/services.css
+++ b/styles/pages/services.css
@@ -1,6 +1,8 @@
 .services {
   background: url(../../assets/icons/path2.svg) no-repeat;
   background-position: center center;
+
+  padding: 0 var(--text-size-display0);
 }
 
 .services-wrapper {
